styles.css
body {
    background-color: #F4F7F5;
    color: #08090A;
    margin: 0px;
    font-family: Arial, Helvetica, sans-serif;
    min-height: 100vh;
    display: grid;
    grid-template-rows: auto auto 1fr auto;
}
.logo {
    max-width: 100px;
    min-width: 60px;
    padding: 10px;
}
.page-header {
    background-color:#BA7BA1;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    padding-left: 30px;
    padding-right: 30px;
}
.navigation a {
    color: #08090A;
    text-decoration: none;
    padding: 15px;
    font-size: 120%;
}
.navigation {
    display: flex;
}
nav a:hover {
    font-weight: bold;
}
.nav-button {
    background-color: transparent;
    border-color: transparent;
}

.banner {
    background-color: #5b0881;
    color: #f5efef;
    display: flex;
    flex-direction: column;
    min-height: 50vh;
    justify-content: center;
    align-items: center;
    padding: 0.6em;
}
.banner h2 {
    font-size: 6em;
    text-align: center;
}
.banner button {
    background-color: yellow;
    padding: 0.8em;
    min-width: 12em;
    border:1px white solid;
    border-radius: 5pt;
    font-size: 1.5rem;
}
.card-container {
    display: flex;
    flex-direction: row;
    gap: 10em;
}
.card img {
    max-width: 100%;
    aspect-ratio: 4/3;
    object-fit: cover;
    object-position: center;
}
.card-content {
    padding: 3.2em;
    text-align: center;
}
.card-content p {
    text-align: justify;
}
.card {
    border: 1px solid #a4a4a4;
    border-radius: 8pt;
    overflow: hidden;
}
.card button {
    min-width: 100%;
    background-color: rgb(140, 140, 218);
    padding: 0.5em;
    border: 1px solid #666666;
}
.content {
    margin-top: 3em;
    margin-left: 10em;
    margin-right: 10em;
    margin-bottom: 3em;
}
.banner2 {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 1em;
    margin-top: 1.5em;
    margin-bottom: 1.5em;
    background: linear-gradient( to bottom right, purple , yellow);
}
.banner2 h2 {
    font-size: 2.5em;
}
.banner2 h3 {
    font-size: 1.5em;
}
.banner2 button {
  font-size: 2rem;
  background-color: aqua;  
  border-radius: 5pt;
}
.footer {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    background-color:#b83684;
    min-height: 20vh;
    padding: 1.2em;
}
.footer-menu {
    display:flex;
    flex-direction: column;
    gap: 1em;
}
.footer-menu a, .social a {
    color: whitesmoke;
    text-decoration: none;
}
.social {
    display: flex;
    flex-direction: row;
    gap: 1.5em;
}
.social a {
    font-size: 1.6em;
}
#contact{
    display: flex;
    flex-direction: column;
    max-width: 500px;
    margin-left: auto;
    margin-right: auto;
    gap: 5px;
}
#contact input, #contact textarea {
    margin-bottom: 1em;
    padding: 5px;
}
.buttons{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}
.buttons > button {
    min-width: 100px;
}
#map {
    width: 100%;
    aspect-ratio: 4/3;
}
.breadcrumbs {
    display: flex;
    flex-direction: row;
    padding: 0.5em;
    gap: 10px;
}
.breadcrumbs a {
     text-decoration: none;
     color:#08090A;
}
.breadcrumbs .active {
    font-weight: bold;
}

